--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -829,27 +829,27 @@ testpath==0.6.0 # LEVEL_01 # Test utilities for code working with files and comm
 text-unidecode==1.3 # LEVEL_01 # The most basic Text::Unidecode port
 threadpoolctl==3.1.0 # LEVEL_01 # threadpoolctl
 toml==0.10.2 # LEVEL_01 # Python Library for Tom's Obvious, Minimal Language
-tomlkit==0.8.0 # LEVEL_01 # Style preserving TOML library
+tomlkit==0.10.0 # LEVEL_01 # Style preserving TOML library
 tornado==6.1 # LEVEL_01 # Tornado is a Python web framework and asynchronous networking library, originally developed at FriendFeed
-tqdm==4.62.3 # LEVEL_01 # Fast, Extensible Progress Meter
+tqdm==4.63.0 # LEVEL_01 # Fast, Extensible Progress Meter
 traitlets==5.1.1 # LEVEL_01 # Traitlets Python configuration system
 typed-ast==1.5.2 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
 typer==0.4.0 # LEVEL_02 # Typer, build great CLIs. Easy to code. Based on Python type hints
 typing-inspect==0.7.1 # LEVEL_02 # Runtime inspection utilities for typing module
 ua-parser==0.10.0 # LEVEL_01 # Python port of Browserscope's user agent parser
-Unidecode==1.3.2 # LEVEL_01 # ASCII transliterations of Unicode text
+Unidecode==1.3.3 # LEVEL_01 # ASCII transliterations of Unicode text
 urllib3==1.26.8 # LEVEL_01 # HTTP library with thread-safe connection pooling, file post, and more
 url-normalize==1.4.3 # LEVEL_02 # URL normalization for Python
 wasabi==0.9.0 # LEVEL_01 # A lightweight console printing and formatting toolkit
 wcwidth==0.2.5 # LEVEL_01 # Measures the displayed width of unicode strings in a terminal
 webencodings==0.5.1 # LEVEL_01 # Character encoding aliases for legacy web content
-websockets==10.1 # LEVEL_01 # An implementation of the WebSocket Protocol (RFC 6455 & 7692)
-websocket-client==1.2.3 # LEVEL_01 # WebSocket client for Python with low level API options
-Werkzeug==2.0.2 # LEVEL_01 # The comprehensive WSGI web application library
+websockets==10.2 # LEVEL_01 # An implementation of the WebSocket Protocol (RFC 6455 & 7692)
+websocket-client==1.3.1 # LEVEL_01 # WebSocket client for Python with low level API options
+Werkzeug==2.0.3 # LEVEL_01 # The comprehensive WSGI web application library
 wireless==0.3.3 # LEVEL_01 # A dead simple, cross-platform Python library to connect to wireless networks
-xxhash==2.0.2 # LEVEL_01 # Python binding for xxHash
+xxhash==3.0.0 # LEVEL_01 # Python binding for xxHash
 yarl==1.7.2 # LEVEL_02 # Yet another URL library
-zict==2.0.0 # LEVEL_02 # Mutable mapping tools
+zict==2.1.0 # LEVEL_02 # Mutable mapping tools
 zipp==3.7.0 # LEVEL_01 # Backport of pathlib-compatible object wrapper for zip files
 #
 PySocks==1.7.1 # LEVEL_01 # A Python SOCKS client module. See https://github.com/Anorov/PySocks for more information
@@ -872,15 +872,15 @@ click-repl==0.2.0 # LEVEL_03 # REPL plugin for Click
 click-didyoumean==0.3.0 # LEVEL_02 # Enables git-like *did-you-mean* feature in click
 click-plugins==1.1.1 # LEVEL_02 # An extension module for click to enable registering CLI commands via setuptools entry-points
 cligj==0.7.2 # LEVEL_02 # Click params for commmand line interfaces to GeoJSON
-click==8.0.3 # LEVEL_01 # Composable command line interface toolkit
+click==8.0.4 # LEVEL_01 # Composable command line interface toolkit
 
 #
 #
 # Resolve below
 #
 #streamlit # has some dependencies !!
-tbb==2021.5.0 # LEVEL_01 # Intel® oneAPI Threading Building Blocks (oneTBB)
-tiledb==0.12.2 # LEVEL_03 # Pythonic interface to the TileDB array storage manager
+tbb==2021.5.0 # LEVEL_01 # LOCKED # Intel® oneAPI Threading Building Blocks (oneTBB)
+tiledb==0.12.3 # LEVEL_03 # Pythonic interface to the TileDB array storage manager
 xarray==0.21.1 # LEVEL_04 # N-D labeled arrays and datasets in Python
 zstd==1.5.1.0 # LEVEL_01 # ZSTD Bindings for Python
 #
@@ -891,14 +891,14 @@ outcome==1.1.0 # LEVEL_02 # Capture the outcome of Python function calls
 pluggy==1.0.0 # LEVEL_01 # plugin and hook calling mechanisms for python
 py==1.11.0 # LEVEL_01 # library with cross-python path, ini-parsing, io, code, log facilities
 pyOpenSSL==22.0.0 # LEVEL_04 # Python wrapper module around the OpenSSL library
-trio==0.19.0 # LEVEL_03 # A friendly Python library for async concurrency and I/O
+trio==0.20.0 # LEVEL_03 # A friendly Python library for async concurrency and I/O
 trio-websocket==0.9.2 # LEVEL_04 # WebSocket library for Trio
-wsproto==1.0.0 # LEVEL_02 # WebSockets state-machine based protocol implementation
+wsproto==1.1.0 # LEVEL_02 # WebSockets state-machine based protocol implementation
 #
 validators==0.18.2 # LEVEL_02 # Python Data Validation for Humans™
 #
 PyGithub==1.55 # LEVEL_04 # Use the full Github API v3
-GitPython==3.1.26 # LEVEL_03 # GitPython is a python library used to interact with Git repositories
+GitPython==3.1.27 # LEVEL_03 # GitPython is a python library used to interact with Git repositories
 gitdb==4.0.9 # LEVEL_02 # Git Object Database
 #
 #
