--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -37,7 +37,6 @@ TA-Lib==0.4.21 # LEVEL_02 # NO_CACHE_DIR # Still issue with upgrading !!! # Pyth
 #
 # not recognized by 'req.txt'
 #
-black==22.1.0 # LEVEL_02 # The uncompromising code formatter
 mplfinance==0.12.7a17 # LEVEL_04 # Utilities for the visualization, and visual analysis, of financial data
 graphviz==0.19.1 # LEVEL_01 # needed for dependecy graphing .. missing dependencies, but still needed # Simple Python interface for Graphviz
 
@@ -105,7 +104,6 @@ pydantic==1.8.2 # LEVEL_02 # LOCKED # thinc 8.0.13; spacy 3.2.1 require pydantic
 rfc3986==1.5.0 # LEVEL_01 # LOCKED # sphinx_autodoc_typehints-1.15.2 requires <2,>=1.3 # Validating URI References per RFC 3986
 #
 pyanalyze==0.5.0 # LEVEL_04 # LOCKED # A static analyzer for Python
-pytype==2022.1.7 # LEVEL_04 # LOCKED # Python type inferencer
 #
 gym==0.20.0 # LEVEL_02 # LOCKED # gym-unity 0.28.0 requires it # Gym: A universal API for reinforcement learning environments
 #
@@ -133,6 +131,9 @@ panel==0.12.6 # LEVEL_04 # A high level app and dashboarding solution for Python
 bokeh==2.4.2 # LEVEL_03 # Interactive plots and applications in the browser from Python
 smmap==5.0.0 # LEVEL_01 # A pure Python implementation of a sliding window memory map manager
 pyparsing==3.0.7 # LEVEL_01 # Python parsing module
+#
+black==22.1.0 # LEVEL_02 # The uncompromising code formatter
+pytype==2022.2.23 # LEVEL_04 # Python type inferencer
 
 #
 # Internal .. needed early by this system
