--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -338,7 +338,7 @@ dask[complete]==2022.2.1 # LEVEL_03 # Parallel PyData with Task Scheduling
 scikit-plot==0.3.7 # LEVEL_04 # An intuitive library to add plotting functionality to scikit-learn objects
 scikit-image==0.19.2 # LEVEL_03 # Image processing in Python
 scikit-learn==1.0.2 # LEVEL_03 # A set of python modules for machine learning and data mining
-pyod==0.9.7 # LEVEL_05 # outlyer detection # A Python Toolbox for Scalable Outlier Detection (Anomaly Detection)
+pyod==0.9.8 # LEVEL_05 # outlyer detection # A Python Toolbox for Scalable Outlier Detection (Anomaly Detection)
 jax==0.3.1 # LEVEL_03 # Differentiate, compile, and transform Numpy code
 #
 zeep==4.1.0 # LEVEL_04 # A modern/fast Python SOAP client based on lxml / requests
@@ -367,7 +367,7 @@ tda-api==1.5.2 # LEVEL_06 # An unofficial wrapper around the TD Ameritrade HTTP 
 pyfolio==0.9.2 # LEVEL_06 # https://github.com/quantopian/pyfolio ; https://www.quantopian.com/docs/user-guide/tools/pyfolio # pyfolio is a Python library for performance and risk analysis of financial portfolios
 empyrical==0.5.5 # LEVEL_05 # empyrical is a Python library with performance and risk statistics commonly used in quantitative finance
 pandas-finance==0.1.2 # LEVEL_05 # High level API for access to and analysis of financial data
-pandas-market-calendars==3.3 # LEVEL_05 # Market and exchange trading calendars for pandas
+pandas-market-calendars==3.4 # LEVEL_05 # Market and exchange trading calendars for pandas
 finta==1.3 # LEVEL_04 # Common financial technical indicators implemented in Pandas
 exchange-calendars==3.6 # LEVEL_04 # exchange_calendars is a Python library with securities exchange calendars
 alpha-vantage==2.3.1 # LEVEL_04 # Python module to get stock data from the Alpha Vantage Api
@@ -424,14 +424,14 @@ PySimpleGUI==4.57.0 # LEVEL_01 # Python GUIs for Humans. Launched in 2018. It's 
 PyQt5==5.15.6 # LEVEL_02 # Python bindings for the Qt cross platform application toolkit
 PyQt5-Qt5==5.15.2 # LEVEL_01 # The subset of a Qt installation needed by PyQt5
 PyQt5-sip==12.9.1 # LEVEL_01 # The sip module support for PyQt5
-pyqtgraph==0.12.3 # LEVEL_02 # for Chaos # Scientific Graphics and GUI Library for Python
+pyqtgraph==0.12.4 # LEVEL_02 # for Chaos # Scientific Graphics and GUI Library for Python
 glib==1.0.0 # LEVEL_01 # A python graphics library that piggy-backs off of pyqt5
 #
 PyOpenGL==3.1.6 # LEVEL_01 # for PySpace # Standard OpenGL bindings for Python
 pygame==2.1.2 # LEVEL_01 # Python Game Development
 Pygments==2.11.2 # LEVEL_01 # Pygments is a syntax highlighting package written in Python
 pydot==1.4.2 # LEVEL_02 # Python interface to Graphviz's Dot
-networkx==2.7 # LEVEL_01 # Python package for creating and manipulating graphs and networks
+networkx==2.7.1 # LEVEL_01 # Python package for creating and manipulating graphs and networks
 # pysimpleguiqt>=0.35.0
 #
 holoviews==1.14.8 # LEVEL_05 # Stop plotting your data - annotate your data and let it visualize itself
@@ -477,13 +477,13 @@ hsluv==5.0.2 # LEVEL_01 # Human-friendly HSL
 #
 # Google ..
 #
-google-cloud-bigquery==2.34.0 # LEVEL_06 # Google BigQuery API client library
+google-cloud-bigquery==2.34.2 # LEVEL_06 # Google BigQuery API client library
 google-cloud-core==2.2.2 # LEVEL_05 # Google Cloud API client core library
-google-resumable-media==2.3.0 # LEVEL_02 # Utilities for Google Media Downloads and Resumable Uploads
+google-resumable-media==2.3.1 # LEVEL_02 # Utilities for Google Media Downloads and Resumable Uploads
 google-crc32c==1.3.0 # LEVEL_01 # A python wrapper of the C library 'Google CRC32C'
 #
 google-api-python-client==2.39.0 # LEVEL_05 # Google API Client Library for Python
-google-api-core==2.5.0 # LEVEL_04 # Google API client core library
+google-api-core==2.6.1 # LEVEL_04 # Google API client core library
 google-auth-httplib2==0.1.0 # LEVEL_04 # Google Authentication Library: httplib2 transport
 google-auth-oauthlib==0.4.6 # LEVEL_04 # Google Authentication Library
 google-pasta==0.2.0 # LEVEL_02 # pasta is an AST-based Python refactoring library
@@ -494,7 +494,7 @@ uritemplate==4.1.1 # LEVEL_01 # required by google-api-python-client # Implement
 # Azure
 azure-eventhub==5.7.0 # LEVEL_04 # Microsoft Azure Event Hubs Client Library for Python
 azure-storage-blob==12.9.0 # LEVEL_05 # Microsoft Azure Blob Storage Client Library for Python
-azure-core==1.22.1 # LEVEL_03 # Microsoft Azure Core Library for Python
+azure-core==1.23.0 # LEVEL_03 # Microsoft Azure Core Library for Python
 azure-common==1.1.28 # LEVEL_01 # Microsoft Azure Client Library for Python (Common)
 smart-open==5.2.1 # LEVEL_01 # Utils for streaming large files (S3, HDFS, GCS, Azure Blob Storage, gzip, bz2...)
 uamqp==1.5.1 # LEVEL_02 # AMQP 1.0 Client Library for Python
@@ -515,7 +515,7 @@ jupyter-server-proxy==3.2.1 # LEVEL_07 # Jupyter server extension to supervise a
 jupyterlab-server==2.10.3 # LEVEL_07 # A set of server components for JupyterLab and JupyterLab like applications
 jupyter-dash==0.4.1 # LEVEL_06 # Dash support for the Jupyter notebook interface
 jupyter-server==1.13.5 # LEVEL_06 # The backend—i.e. core services, APIs, and REST endpoints—to Jupyter web applications
-jupyter-console==6.4.0 # LEVEL_06 # Jupyter terminal console
+jupyter-console==6.4.3 # LEVEL_06 # Jupyter terminal console
 jupyter-packaging==0.11.1 # LEVEL_04 # Jupyter Packaging Utilities
 jupyter-client==7.1.2 # LEVEL_03 # Jupyter protocol implementation and client libraries
 jupyter-core==4.9.2 # LEVEL_02 # Jupyter core package. A base package on which Jupyter projects rely
@@ -524,7 +524,7 @@ jupyterlab-widgets==1.0.2 # LEVEL_01 # A JupyterLab extension
 #
 ipywidgets==7.6.5 # LEVEL_08 # IPython HTML widgets for Jupyter
 widgetsnbextension==3.5.2 # LEVEL_07 # IPython HTML widgets for Jupyter
-nbclassic==0.3.5 # LEVEL_07 # Jupyter Notebook as a Jupyter Server extension
+nbclassic==0.3.6 # LEVEL_07 # Jupyter Notebook as a Jupyter Server extension
 notebook==6.4.8 # LEVEL_06 # A web-based notebook environment for interactive computing
 nbsphinx==0.8.8 # LEVEL_06 # Jupyter Notebook Tools for Sphinx
 nbconvert==6.4.2 # LEVEL_05 # Converting Jupyter Notebooks
@@ -643,7 +643,7 @@ htmlmin==0.1.12 # LEVEL_01 # An HTML Minifier
 pipx==1.0.0 # LEVEL_03 # Install and Run Python Applications in Isolated Environments
 docker==5.0.3 # LEVEL_03 # A Python library for the Docker Engine API
 docker-pycreds==0.4.0 # LEVEL_02 # Python bindings for the docker credentials store API
-pyinstaller==4.9 # LEVEL_03 # PyInstaller bundles a Python application and all its dependencies into a single package
+pyinstaller==4.10 # LEVEL_03 # PyInstaller bundles a Python application and all its dependencies into a single package
 pyinstaller-hooks-contrib==2022.2 # LEVEL_01 # deployment # Community maintained hooks for PyInstaller
 
 # Packages
@@ -826,7 +826,7 @@ statsmodels==0.13.2 # LEVEL_04 # Statistical computations and models for Python
 stdlib-list==0.8.0 # LEVEL_01 # A list of Python Standard Libraries (2.6-7, 3.2-9)
 tabulate==0.8.9 # LEVEL_01 # Pretty-print tabular data
 tblib==1.7.0 # LEVEL_01 # Traceback serialization library
-terminado==0.13.1 # LEVEL_02 # Tornado websocket backend for the Xterm.js Javascript terminal emulator library
+terminado==0.13.3 # LEVEL_02 # Tornado websocket backend for the Xterm.js Javascript terminal emulator library
 testpath==0.6.0 # LEVEL_01 # Test utilities for code working with files and commands
 text-unidecode==1.3 # LEVEL_01 # The most basic Text::Unidecode port
 threadpoolctl==3.1.0 # LEVEL_01 # threadpoolctl
@@ -860,7 +860,7 @@ python-socks==2.0.3 # LEVEL_01 # Core proxy (SOCKS4, SOCKS5, HTTP tunneling) fun
 #
 # SQL
 #
-SQLAlchemy== 1.4.31 # LEVEL_02 # Database Abstraction Library
+SQLAlchemy== 1.4.32 # LEVEL_02 # Database Abstraction Library
 PyMySQL==1.0.2 # LEVEL_01 # Pure Python MySQL Driver
 pyodbc==4.0.32 # LEVEL_01 # DB API Module for ODBC
 sqlparse==0.4.2 # LEVEL_01 # A non-validating SQL parser
@@ -881,7 +881,7 @@ click==8.0.4 # LEVEL_01 # Composable command line interface toolkit
 # Resolve below
 #
 #streamlit # has some dependencies !!
-tbb==2021.5.0 # LEVEL_01 # LOCKED # Intel® oneAPI Threading Building Blocks (oneTBB)
+tbb==2021.5.0 # LEVEL_01 # LOCKED # ONLY_OSX # Intel® oneAPI Threading Building Blocks (oneTBB)
 tiledb==0.13.0 # LEVEL_03 # Pythonic interface to the TileDB array storage manager
 xarray==2022.3.0 # LEVEL_04 # N-D labeled arrays and datasets in Python
 zstd==1.5.1.0 # LEVEL_01 # ZSTD Bindings for Python
@@ -1005,7 +1005,7 @@ rouge-score==0.0.4 # LEVEL_03 # Pure python implementation of ROUGE-1.5.5
 pynvml==11.4.1 # LEVEL_01 # Python Bindings for the NVIDIA Management Library
 #
 numcodecs==0.9.1 # LEVEL_02 # A Python package providing buffer compression and transformation codecs for use in data storage and communication applications
-zarr==2.11.0 # LEVEL_03 # An implementation of chunked, compressed, N-dimensional arrays for Python
+zarr==2.11.1 # LEVEL_03 # An implementation of chunked, compressed, N-dimensional arrays for Python
 asciitree==0.3.3 # LEVEL_01 # Draws ASCII trees
 #
 # dbt !! not compatible with many versions !!
@@ -1024,7 +1024,7 @@ frozenlist==1.3.0 # LEVEL_01 # A list-like structure which implements collection
 axial-positional-embedding==0.2.1 # LEVEL_03 # Axial Positional Embedding
 local-attention==1.4.3 # LEVEL_03 # Local windowed attention, for language modeling
 netCDF4==1.5.8 # LEVEL_03 # Provides an object-oriented python interface to the netCDF version 4 library
-cftime==1.5.2 # LEVEL_02 # Time-handling functionality from netcdf4-python
+cftime==1.6.0 # LEVEL_02 # Time-handling functionality from netcdf4-python
 omegaconf==2.1.1 # LEVEL_02 # A flexible configuration library
 sentry-sdk==1.5.6 # LEVEL_02 # Python client for Sentry (https://sentry.io)
 yaspin==2.1.0 # LEVEL_02 # Yet Another Terminal Spinner
@@ -1052,21 +1052,21 @@ python-editor==1.0.4 # LEVEL_01 # Programmatically open an editor, capture the r
 querystring-parser==1.2.4 # LEVEL_02 # QueryString parser for Python/Django that correctly handles nested dictionaries
 #
 
-amqp==5.0.9 # LEVEL_02 # Low-level AMQP client for Python (fork of amqplib)
+amqp==5.1.0 # LEVEL_02 # Low-level AMQP client for Python (fork of amqplib)
 vine==5.0.0 # LEVEL_01 # Promises, promises, promises
 #
 
 flower==1.0.0 # LEVEL_05 # Celery Flower
-gradio==2.8.5 # LEVEL_05 # Python library for easily interacting with trained machine learning models
+gradio==2.8.7 # LEVEL_05 # Python library for easily interacting with trained machine learning models
 paramiko==2.9.2 # LEVEL_04 # SSH2 protocol library
 celery==5.2.3 # LEVEL_04 # Distributed Task Queue
 analytics-python==1.4.0 # LEVEL_03 # The hassle-free way to integrate analytics into any python application
-kombu==5.2.3 # LEVEL_03  # Messaging library for Python
+kombu==5.2.4 # LEVEL_03  # Messaging library for Python
 curtsies==0.3.10 # LEVEL_03 # Curses-like terminal wrapper, with colored strings!
 monotonic==1.6 # LEVEL_01 # An implementation of time.monotonic() for Python 2 & < 3.3
 billiard==3.6.4.0 # LEVEL_01 # Python multiprocessing fork with improvements and bugfixes
 cwcwidth==0.1.6 # LEVEL_01 # Python bindings for wc(s)width
-waitress==2.0.0 # LEVEL_01 # Waitress WSGI server
+waitress==2.1.0 # LEVEL_01 # Waitress WSGI server
 boltons==21.0.0 # LEVEL_01 # When they're not builtins, they're boltons
 ffmpy==0.3.0 # LEVEL_01 # A simple Python wrapper for ffmpeg
 humanize==4.0.0 # LEVEL_01 # Python humanize utilities
