--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -113,6 +113,8 @@ h11==0.12.0 # LEVEL_01 # LOCKED # httpcore 0.14.5 depends on h11<0.13 and >=0.11
 #
 starlette==0.17.1 # LEVEL_03 # LOCKED # fastapi 0.73.0 depends on starlette==0.17.1 # The little ASGI library that shines
 #
+tbb==2021.5.0 # LEVEL_01 # LOCKED # ONLY_OSX # Intel® oneAPI Threading Building Blocks (oneTBB)
+#
 #
 # Former LOCKED .. now freed ;-)
 #
@@ -805,15 +807,15 @@ pycparser==2.21 # LEVEL_01 # C parser in Python
 PyMeeus==0.5.11 # LEVEL_01 # Python implementation of Jean Meeus astronomical routines
 pyrsistent==0.18.1 # LEVEL_01 # Persistent/Functional/Immutable data structures
 python-slugify==6.1.1 # LEVEL_02 # A Python slugify application that also handles Unicode
-PyWavelets==1.2.0 # LEVEL_02 # PyWavelets, wavelet transform module
+PyWavelets==1.3.0 # LEVEL_02 # PyWavelets, wavelet transform module
 PyYAML==6.0 # LEVEL_01 # YAML parser and emitter for Python
 pyzmq==22.3.0 # LEVEL_01 # Python bindings for 0MQ
 qcore==1.7.0 # LEVEL_02 # Quora's core utility library
-regex==2022.3.2 # LEVEL_01 # Alternative regular expression module, to replace re
+regex==2022.3.15 # LEVEL_01 # Alternative regular expression module, to replace re
 retrying==1.3.3 # LEVEL_02 # Retrying
 rsa==4.8 # LEVEL_02 # Pure-Python RSA implementation
 sacrebleu==2.0.0 # LEVEL_02 # Hassle-free computation of shareable, comparable, and reproducible BLEU, chrF, and TER scores
-sacremoses==0.0.47 # LEVEL_02 # SacreMoses
+sacremoses==0.0.49 # LEVEL_02 # SacreMoses
 schedule==1.1.0 # LEVEL_01 # Job scheduling for humans
 Send2Trash==1.8.0 # LEVEL_01 # Send file to trash natively under Mac OS X, Windows and Linux
 seqeval==1.2.2 # LEVEL_04 # Testing framework for sequence labeling
@@ -839,8 +841,8 @@ typed-ast==1.5.2 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type com
 typer==0.4.0 # LEVEL_02 # Typer, build great CLIs. Easy to code. Based on Python type hints
 typing-inspect==0.7.1 # LEVEL_02 # Runtime inspection utilities for typing module
 ua-parser==0.10.0 # LEVEL_01 # Python port of Browserscope's user agent parser
-Unidecode==1.3.3 # LEVEL_01 # ASCII transliterations of Unicode text
-urllib3==1.26.8 # LEVEL_01 # HTTP library with thread-safe connection pooling, file post, and more
+Unidecode==1.3.4 # LEVEL_01 # ASCII transliterations of Unicode text
+urllib3==1.26.9 # LEVEL_01 # HTTP library with thread-safe connection pooling, file post, and more
 url-normalize==1.4.3 # LEVEL_02 # URL normalization for Python
 wasabi==0.9.0 # LEVEL_01 # A lightweight console printing and formatting toolkit
 wcwidth==0.2.5 # LEVEL_01 # Measures the displayed width of unicode strings in a terminal
@@ -881,7 +883,6 @@ click==8.0.4 # LEVEL_01 # Composable command line interface toolkit
 # Resolve below
 #
 #streamlit # has some dependencies !!
-tbb==2021.5. # LEVEL_01 # LOCKED # ONLY_OSX # Intel® oneAPI Threading Building Blocks (oneTBB)
 tiledb==0.13.1 # LEVEL_03 # Pythonic interface to the TileDB array storage manager
 xarray==2022.3.0 # LEVEL_04 # N-D labeled arrays and datasets in Python
 zstd==1.5.1.0 # LEVEL_01 # ZSTD Bindings for Python
@@ -1042,7 +1043,7 @@ emoji==1.7.0 # LEVEL_01 # Emoji for Python
 #
 shellingham==1.4.0 # LEVEL_01 # Tool to Detect Surrounding Shell
 #
-fonttools==4.29.1 # LEVEL_01 # Tools to manipulate font files
+fonttools==4.30.0 # LEVEL_01 # Tools to manipulate font files
 setuptools-scm==6.4.2 # LEVEL_03 # the blessed package to manage your versions by scm tags
 tomli==2.0.1 # LEVEL_01 # A lil' TOML parser
 #
@@ -1057,8 +1058,8 @@ vine==5.0.0 # LEVEL_01 # Promises, promises, promises
 #
 
 flower==1.0.0 # LEVEL_05 # Celery Flower
-gradio==2.8.8 # LEVEL_05 # Python library for easily interacting with trained machine learning models
-paramiko==2.9.2 # LEVEL_04 # SSH2 protocol library
+gradio==2.8.10 # LEVEL_05 # Python library for easily interacting with trained machine learning models
+paramiko==2.10.2 # LEVEL_04 # SSH2 protocol library
 celery==5.2.3 # LEVEL_04 # Distributed Task Queue
 analytics-python==1.4.0 # LEVEL_03 # The hassle-free way to integrate analytics into any python application
 kombu==5.2.4 # LEVEL_03  # Messaging library for Python
@@ -1087,7 +1088,7 @@ keras-unet-collection==0.1.13 # LEVEL_01 # The Tensorflow, Keras implementation 
 mdit-py-plugins==0.3.0 # LEVEL_03 # Collection of plugins for markdown-it-py
 #
 python-multipart==0.0.5 # LEVEL_02 # A streaming multipart parser for Python
-elastic-transport==8.0.1 # LEVEL_02 # Transport classes and utilities shared among Python Elastic client libraries
+elastic-transport==8.1.0 # LEVEL_02 # Transport classes and utilities shared among Python Elastic client libraries
 linkify-it-py==1.0.3 # LEVEL_02 # Links recognition library with FULL unicode support
 markdown-it-py==2.0.1 # LEVEL_02 # Python port of markdown-it. Markdown parsing, done right!
 #
