--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -115,6 +115,8 @@ starlette==0.17.1 # LEVEL_03 # LOCKED # fastapi 0.73.0 depends on starlette==0.1
 #
 tbb==2021.5.0 # LEVEL_01 # LOCKED # ONLY_OSX # Intel® oneAPI Threading Building Blocks (oneTBB)
 #
+jmespath==0.10.0 # LEVEL_01 # LOCKED # boto* requires it # JSON Matching Expressions
+#
 #
 # Former LOCKED .. now freed ;-)
 #
@@ -499,12 +501,12 @@ azure-storage-blob==12.9.0 # LEVEL_05 # Microsoft Azure Blob Storage Client Libr
 azure-core==1.23.0 # LEVEL_03 # Microsoft Azure Core Library for Python
 azure-common==1.1.28 # LEVEL_01 # Microsoft Azure Client Library for Python (Common)
 smart-open==5.2.1 # LEVEL_01 # Utils for streaming large files (S3, HDFS, GCS, Azure Blob Storage, gzip, bz2...)
-uamqp==1.5.1 # LEVEL_02 # AMQP 1.0 Client Library for Python
+uamqp==1.5.2 # LEVEL_02 # AMQP 1.0 Client Library for Python
 
 # Amazon
-boto3==1.21.15  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
+boto3==1.21.20  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
 s3transfer==0.5.2 # LEVEL_04 # An Amazon S3 Transfer Manager
-botocore==1.24.15 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
+botocore==1.24.20 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
 boto==2.49.0 # LEVEL_01 # Amazon Web Services Library
 
 #
@@ -512,28 +514,28 @@ boto==2.49.0 # LEVEL_01 # Amazon Web Services Library
 #
 jupyter-bokeh==3.0.4 # LEVEL_09 # A Jupyter extension for rendering Bokeh content
 jupyter==1.0.0 # LEVEL_09 # Jupyter metapackage. Install all the Jupyter components in one go
-jupyterlab==3.3.0 # LEVEL_08 # JupyterLab computational environment
+jupyterlab==3.3.2 # LEVEL_08 # JupyterLab computational environment
 jupyter-server-proxy==3.2.1 # LEVEL_07 # Jupyter server extension to supervise and proxy web services
-jupyterlab-server==2.10.3 # LEVEL_07 # A set of server components for JupyterLab and JupyterLab like applications
+jupyterlab-server==2.11.0 # LEVEL_07 # A set of server components for JupyterLab and JupyterLab like applications
 jupyter-dash==0.4.1 # LEVEL_06 # Dash support for the Jupyter notebook interface
-jupyter-server==1.13.5 # LEVEL_06 # The backend—i.e. core services, APIs, and REST endpoints—to Jupyter web applications
+jupyter-server==1.15.5 # LEVEL_06 # The backend—i.e. core services, APIs, and REST endpoints—to Jupyter web applications
 jupyter-console==6.4.3 # LEVEL_06 # Jupyter terminal console
 jupyter-packaging==0.11.1 # LEVEL_04 # Jupyter Packaging Utilities
 jupyter-client==7.1.2 # LEVEL_03 # Jupyter protocol implementation and client libraries
 jupyter-core==4.9.2 # LEVEL_02 # Jupyter core package. A base package on which Jupyter projects rely
 jupyterlab-pygments==0.1.2 # LEVEL_02 # Pygments theme using JupyterLab CSS variables
-jupyterlab-widgets==1.0.2 # LEVEL_01 # A JupyterLab extension
+jupyterlab-widgets==1.1.0 # LEVEL_01 # A JupyterLab extension
 #
-ipywidgets==7.6.5 # LEVEL_08 # IPython HTML widgets for Jupyter
-widgetsnbextension==3.5.2 # LEVEL_07 # IPython HTML widgets for Jupyter
-nbclassic==0.3.6 # LEVEL_07 # Jupyter Notebook as a Jupyter Server extension
-notebook==6.4.8 # LEVEL_06 # A web-based notebook environment for interactive computing
+ipywidgets==7.7.0 # LEVEL_08 # IPython HTML widgets for Jupyter
+widgetsnbextension==3.6.0 # LEVEL_07 # LOCKED # # IPython HTML widgets for Jupyter
+nbclassic==0.3.7 # LEVEL_07 # Jupyter Notebook as a Jupyter Server extension
+notebook==6.4.10 # LEVEL_06 # A web-based notebook environment for interactive computing
 nbsphinx==0.8.8 # LEVEL_06 # Jupyter Notebook Tools for Sphinx
-nbconvert==6.4.2 # LEVEL_05 # Converting Jupyter Notebooks
+nbconvert==6.4.4 # LEVEL_05 # Converting Jupyter Notebooks
 qtconsole==5.2.2 # LEVEL_06 # Jupyter Qt console
 ipykernel==6.9.1 # LEVEL_05 # IPython Kernel for Jupyter
-nbclient==0.5.12 # LEVEL_04 # A client library for executing notebooks. Formerly nbconvert's ExecutePreprocessor
-nbformat==5.1.3 # LEVEL_03 # The Jupyter Notebook format
+nbclient==0.5.13 # LEVEL_04 # A client library for executing notebooks. Formerly nbconvert's ExecutePreprocessor
+nbformat==5.2.0 # LEVEL_03 # The Jupyter Notebook format
 matplotlib-inline==0.1.3 # LEVEL_02 # Inline Matplotlib backend for Jupyter
 #
 
@@ -551,7 +553,7 @@ Django==4.0.3 # LEVEL_02 # A high-level Python web framework that encourages rap
 # ASGI
 #
 asgiref==3.5.0 # LEVEL_01 # ASGI specs, helper code, and adapters
-uvicorn==0.17.5 # LEVEL_02 # The lightning-fast ASGI server
+uvicorn==0.17.6 # LEVEL_02 # The lightning-fast ASGI server
 #
 #
 # Flask
@@ -571,7 +573,6 @@ json5==0.9.6 # LEVEL_01 # A Python implementation of the JSON5 data format
 simplejson==3.17.6 # LEVEL_01 # Simple, fast, extensible JSON encoder/decoder for Python
 ujson==5.1.0 # LEVEL_01 # Ultra fast JSON encoder and decoder for Python
 PyJWT==2.3.0 # LEVEL_01 # JSON Web Token implementation in Python
-jmespath==0.10.0 # LEVEL_01 # JSON Matching Expressions
 #
 # RPC
 #
@@ -616,10 +617,10 @@ cssselect2==0.5.0 # LEVEL_03 # CSS selectors for Python ElementTree
 # Checkers
 #
 pytest-asyncio==0.18.2 # LEVEL_04 # Pytest support for asyncio
-pytest==7.0.1 # LEVEL_03 # pytest: simple powerful testing with Python
+pytest==7.1.0 # LEVEL_03 # pytest: simple powerful testing with Python
 flake8==4.0.1 # LEVEL_02 # better linter than pyflakes # the modular source code checker: pep8 pyflakes and co
 mccabe==0.6.1 # LEVEL_01 # LOCKED ? # McCabe checker, plugin for flake8
-mypy==0.931 # LEVEL_02 # Optional static typing for Python
+mypy==0.941 # LEVEL_02 # Optional static typing for Python
 mypy-extensions==0.4.3 # LEVEL_01 # Experimental type system extensions for programs checked with the mypy typechecker
 autopep8==1.6.0 # LEVEL_02 # using fix_file # A tool that automatically formats Python code to conform to the PEP 8 style guide
 memory-profiler==0.60.0 # LEVEL_02 # A module for monitoring memory usage of a python program
@@ -678,7 +679,7 @@ persist-queue==0.7.0 # LEVEL_01 # A thread-safe disk based persistent queue in P
 #
 # Tools
 #
-cloudscraper==1.2.58 # LEVEL_04 # A Python module to bypass Cloudflare's anti-bot page
+cloudscraper==1.2.60 # LEVEL_04 # A Python module to bypass Cloudflare's anti-bot page
 libclang==13.0.0 # LEVEL_01 # Clang Python Bindings, mirrored from the official LLVM repo: https://github.com/llvm/llvm-project/tree/main/clang/bindings/python, to make the installation process easier
 #
 libcst==0.4.1 # LEVEL_03 # A concrete syntax tree with AST-like properties for Python 3.5, 3.6, 3.7 and 3.8 programs
