--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -411,7 +411,7 @@ pycryptodome==3.14.1 # LEVEL_01 # Cryptographic library for Python
 #
 #
 #
-Authlib==1.0.0 # LEVEL_04 # The ultimate Python library in building OAuth and OpenID Connect servers
+Authlib==1.0.0 # LEVEL_04 # The ultimate Python library in building OAuth and OpenID Connect servers and clients
 python-dotenv==0.19.2 # LEVEL_01 # Read key-value pairs from a .env file and set them as environment variables
 selenium==4.1.3 # LEVEL_05 #
 #
@@ -516,7 +516,7 @@ boto==2.49.0 # LEVEL_01 # Amazon Web Services Library
 #
 jupyter-bokeh==3.0.4 # LEVEL_09 # A Jupyter extension for rendering Bokeh content
 jupyter==1.0.0 # LEVEL_09 # Jupyter metapackage. Install all the Jupyter components in one go
-jupyterlab==3.3.2 # LEVEL_08 # JupyterLab computational environment
+jupyterlab==3.3.2 # LEVEL_09 # JupyterLab computational environment
 jupyter-server-proxy==3.2.1 # LEVEL_07 # Jupyter server extension to supervise and proxy web services
 jupyterlab-server==2.11.0 # LEVEL_07 # A set of server components for JupyterLab and JupyterLab like applications
 jupyter-dash==0.4.1 # LEVEL_06 # Dash support for the Jupyter notebook interface
@@ -530,7 +530,7 @@ jupyterlab-widgets==1.1.0 # LEVEL_01 # A JupyterLab extension
 #
 ipywidgets==7.7.0 # LEVEL_08 # IPython HTML widgets for Jupyter
 widgetsnbextension==3.6.0 # LEVEL_07 # LOCKED # # IPython HTML widgets for Jupyter
-nbclassic==0.3.7 # LEVEL_07 # Jupyter Notebook as a Jupyter Server extension
+nbclassic==0.3.7 # LEVEL_08 # Jupyter Notebook as a Jupyter Server extension
 notebook==6.4.10 # LEVEL_06 # A web-based notebook environment for interactive computing
 nbsphinx==0.8.8 # LEVEL_06 # Jupyter Notebook Tools for Sphinx
 nbconvert==6.4.4 # LEVEL_05 # Converting Jupyter Notebooks
@@ -1050,7 +1050,7 @@ setuptools-scm==6.4.2 # LEVEL_03 # the blessed package to manage your versions b
 tomli==2.0.1 # LEVEL_01 # A lil' TOML parser
 #
 databricks-cli==0.16.4 # LEVEL_03 # A command line interface for Databricks
-Mako==1.2.0 # LEVEL_02 # A super-fast templating language that borrows the  best ideas from the existing templating languages
+Mako==1.2.0 # LEVEL_02 # A super-fast templating language that borrows the best ideas from the existing templating languages
 python-editor==1.0.4 # LEVEL_01 # Programmatically open an editor, capture the result
 querystring-parser==1.2.4 # LEVEL_02 # QueryString parser for Python/Django that correctly handles nested dictionaries
 #
