--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -1079,10 +1079,11 @@ more-itertools==8.12.0 # LEVEL_01 # More routines for operating on iterables, be
 #
 mixpanel==4.9.0 # LEVEL_03 # Official Mixpanel library for Python
 #
+# ONNX
+keras2onnx==1.7.0 # LEVEL_04 # Converts Machine Learning models to ONNX for use in Windows ML
 onnxconverter-common==1.9.0 # LEVEL_03 # ONNX Converter and Optimization Tools
 onnx==1.11.0 # LEVEL_02 # Open Neural Network Exchange
 tf2onnx==1.9.3 # LEVEL_03 # Tensorflow to ONNX converter
-keras2onnx==1.7.0 # LEVEL_04 # Converts Machine Learning models to ONNX for use in Windows ML
 keras-unet-collection==0.1.13 # LEVEL_01 # The Tensorflow, Keras implementation of U-net, V-net, U-net++, UNET 3+, Attention U-net, R2U-net, ResUnet-a, U^2-Net, TransUNET, and Swin-UNET with optional ImageNet-trained backbones
 #
 #python-multipart==0.0.5 # LEVEL_02 # A streaming multipart parser for Python
@@ -1099,4 +1100,15 @@ mdurl==0.1.0 # LEVEL_01 # Markdown URL utilities
 orjson==3.6.7 # LEVEL_01 # Fast, correct Python JSON library supporting dataclasses, datetimes, and numpy
 setproctitle==1.2.2 # LEVEL_01 # A Python module to customize the process title
 uc-micro-py==1.0.1 # LEVEL_01 # Micro subset of unicode data files for linkify-it-py projects
+
+# sclblonnx==0.1.9 # LEVEL_01
+# sclblpy==0.1.7 # LEVEL_01
+onnxruntime==1.10.0 # LEVEL_02 # ONNX Runtime is a runtime accelerator for Machine Learning models
+onnxoptimizer==0.2.6 # LEVEL_03 # Open Neural Network Exchange
+onnx-simplifier==0.3.7 # LEVEL_04 # Simplify your ONNX model
+
 #
+# do-mpc
+#
+casadi==3.5.5.post2 # LEVEL_01 # CasADi -- framework for algorithmic differentiation and numeric optimization
+do-mpc==4.3.3 # LEVEL_04
